# trc2root

./: CMakeLists.txt  README.md  trc2root.cpp
include/: read_waveform.h
src/: read_waveform .cpp
